# pyopticam

./: .gitignore  CMakeLists.txt  activate.bat  activate.sh  pyproject.toml
assets/: example_calib.json  example_calib.mcal
cmake-modules/: FindOTCSDK.cmake
examples/: optitrack_thread.py  read_calibration.py  video_viewer.py
src/: pyopticam_ext.cpp
src/pyopticam/: __init__.py  calibration.py  optitrack_stream.py  optitrack_thread.py  pyopticam_ext.pyi
