[project]
name = "pyopticam"
version = "0.0.2"
description = "A nanobind wrapper for NaturalPoint's Optitrack Camera SDK"
authors = [{ name = "Johnathon Selstad", email = "john.selstad@ultraleap.com" }]
license = { text = "BSD" }
requires-python = ">=3.8"

[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/pyopticam"]
cmake.build-type = "Release"

[tool.hatch.build.targets.wheel]
packages = ["src/pyopticam"]

[tool.pixi.target.win-64.activation]
scripts = ["activate.bat"]

[tool.pixi.target.linux-64.activation]
scripts = ["activate.sh"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.8"
cmake = ">=3.17"
ninja = "*"
pip = "*"

[tool.pixi.pypi-dependencies]
nanobind = "*"
scikit-build-core = "*"
opencv-python = "*"
pyopticam = { path = ".", editable = true }

[tool.pixi.tasks]
clean = "rm -rf build dist *.egg-info"